# abacus

./: .dockerignore  .gitignore  CLA.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  SECURITY.md  build-and-run  build-and-run.sh  codecov.yml  contributors.yml  docker-compose.local-test.yml  docker-compose.yaml  docker-compose.yml  lefthook.yml  publiccode.yml  pull-and-run  sigrid.yaml
backend/: .env  .gitignore  Cargo.toml  README.md  build.rs  clippy.toml  dev.sh  openapi.json  publiccode.yml  sqlx.toml
backend/.sqlx/: query-00bab29ee79c3368bd94ab0fdc79cf4516b56ce8e641c5e3c0d1f3f7bd7eae63.json  query-00fec81161854b197492cb34884f5a1a11a2125c846e8e734407c25e099905f3.json  query-01a4232c015af8f7bfb6b8e5467de3fa163f6df03381f831290d0e0f36d56ff6.json  query-01b3124da5b3c69640192176801f7fe4a1e5ae5f8394989cf2ae2cb935351d3d.json  query-01ca38a9adfc916454801e682a5409de8dfdd83d2be55e55f42a2d6596cc4e1b.json  query-0201284ec7f76f0a79e55e232742465beeb54ac04261eb7fb6022467fd8b7086.json  query-025bb0aadf883745e61c594916c2faadd0b0e6220f889be8e9b7c840f83e45a4.json  query-02befb6eb6070ce836af6be44d313ec5c65708549e54e5de5ac3b23f3aa0a3da.json  query-02cf832a44228422bbf7c2efb960ea5587c90879025db54f9c0766da068c62f2.json  query-02e1769cfb68d7c2934a253a69b95f423cd1a0c69e5aea9d378839800875f8a5.json  query-02e63f0e0faaab5750b4f8c0e14ba2bbd361005617503093ad7a9bed6dcbdfac.json  query-03342a819aaed20e0bb49baa50463d4fbe035a521236d9dfcef44cc8701b5e95.json  query-038f37132d44a6b46da140add76eade35a0f40af3c1130182da5abe78dd9db20.json  query-03b8abe48aca72f3fad4511f271d93dcd69484511d774cfa7d50994023170e32.json  query-03e371514d8e30d91d91fcc2ee5c9ad3f2ce666218ba466731680f68f142b581.json  query-03fc51351489b6fa98599311891bbc17e75cf68ab2a9e189beebfdbfd18e94e5.json  query-0412e0b31c0b31e1c059fdb2c8182cb5f30c9d1f7e5eb058ab1958b3764cd778.json  query-04a548c9f17a69df34dd2ae8c8da02af43a7863a494d1718e92a228596bc5688.json  query-04d59151ab3fd0247ae2cbb840793c6f4e7e64857a5f6c1679b0d68e64515451.json  query-04d6e9d2cb45ec4f1321736e00a830ae3e3a10968ca05b9abb2ed8111f6e3b72.json  query-04d8a56ecca77ac9f9e50de6712a2dda56283aced5b535661202b41bc6b861ab.json  query-04dcb0f9c25c5b0c19ed9eba9fab77f5060c1b4d04be01f7d2ceb9104c00a6d4.json  query-053aaf45e0602c11ffd4cb8866a4bbadf8d81cf1b76df3f20790a2f6e4188241.json  query-057219d4c7cf13fa0b4ef8c5d4211685961027325742e6167181c5505c43ec81.json  query-058058b866dd0bd6cf3876167af39caf4f82b0627d4a9e47cdb0d95d9c1bc4a6.json  query-05ac0059dd01865b2662cb0a8a55de56368908e64057d96c37e7b2eade166aa5.json  query-05caf92677684eba1032ae072a2ba7a6b7afdf3f83afb108999f90fa51be9598.json  query-05fed12157fb32bf04107833141cd39c8d9c01b5ea61ea4a06efbf1cdc024630.json  query-060b8a01887e6668c3d20b2c03e19b3fe6313f674a8918f0fe1de870c55f4900.json  query-06c945e50567c6801f1346d436cdc86a82a4e13dd45d8286295ba37cdbdc045e.json  query-07084f6173cdee6559591c4b954171bca60bbbba95e73e0ce8b29e0b305caf03.json  query-0780b65989fdcbddc56ec9b08f59288e3d64a23d807fc27330069de8dd15d098.json  query-07d8ca16dd360e6c761873b3b1a1399e265cb468f8225b703e341d454f5266b4.json  query-082847b31bd9c0f978069d086efa6b5582118cd3e1c9c0526a11f9375580d986.json  query-09658bae4b20c5e630df28be3b6c98bb9a68ce0a49fcb6c3b197d6e5863dca79.json  query-09bb3ddf3ce12d4bda63d456d367d10871cb7f53ab134c6b89e43da78a4e6d50.json  query-0a142186e47dd5d49870d17f5d0835a8f936bb1b72f9fec9eda8b98af7ee587d.json  query-0a38a5e2aa2e6ff957dbdf433657f147e98110071146922eef9f9fa70ed0896f.json  query-0a68945d602894d26f6b16179c9d4deddcf6634186008079e37d0aed150bd986.json  query-0a731bcae1d260caf75faa357b510e6e7d25c0f1ae7f36e0ccdc3ec324bcfc4c.json  (+662 more)
backend/abacus_crate/: .env  .gitignore  Cargo.toml
backend/apportionment/: Cargo.toml  README.md
backend/fixtures/: election_1.sql  election_10_csb.sql  election_1_data_entry_differences.sql  election_2.sql  election_3.sql  election_4.sql  election_5.sql  election_5_with_results.sql  election_6.sql  election_6_no_polling_stations.sql  election_7.sql  election_7_four_sessions.sql  election_8_csb.sql  election_8_csb_with_results.sql  election_8_four_sessions_with_results.sql  election_9_csb.sql  election_9_four_sessions_without_corrections.sql  elections.sql  polling_station_data_entries.sql  polling_station_results.sql  polling_stations.sql  reset.sql  users.sql
backend/fuzz/: Cargo.toml  README.md  rust-toolchain.toml
backend/migrations/: 0_hello_world.sql  10_apportionment.sql  10_polling_station_investigations.sql  11_alter_users.sql  1_elections.sql  1_polling_station_data_entries.sql  1_polling_station_data_entry.sql  2_polling_stations.sql  3_data_entries.sql  3_polling_station_data_entries.sql  3_polling_stations.sql  4_polling_station_results.sql  4_users.sql  5_polling_station_status_entries.sql  5_sessions.sql  5_users.sql  6_sessions.sql  7_audit_log.sql  7_audit_log_events.sql  7_committee_sessions.sql  8_committee_sessions.sql  8_files.sql  9_files.sql  9_polling_station_investigations.sql  9_sub_committees.sql
backend/pdf_gen/: Cargo.toml
backend/service_ui/: Cargo.toml
backend/src/: app_error.rs  dot_serializer.rs  error.rs  fixtures.rs  lib.rs  repository.rs  router.rs  test_support.rs  tests.rs  validation.rs
backend/templates/: model-n-10-1.typ  model-n-10-2.typ  model-na-14-2-bijlage1.typ  model-na-14-2.typ  model-na-31-1-bijlage-1.typ  model-na-31-1-inlegvel.typ  model-na-31-1.typ  model-na-31-2-bijlage-1.typ  model-na-31-2-bijlage-2.typ  model-na-31-2-bijlage1.typ  model-na-31-2-bijlage2.typ  model-na-31-2-inlegvel.typ  model-na-31-2.typ  model-p-22-1.typ  model-p-22-2-bijlage1.typ  model-p-22-2.typ  model-p-2a.typ  teletex-test.typ  test-teletex-charset.typ  test-unsupported-chars.typ  visual-diff.sh
backend/tests/: account_integration_test.rs  airgap_detection_test.rs  apportionment_integration_test.rs  authorization_integration_test.rs  authorization_test.rs  backup_integration_test.rs  committee_session_integration_test.rs  data_entries_integration_test.rs  data_entries_resolve_integration_test.rs  election_admin_integration_tests.rs  election_integration_test.rs  init_tls_test.rs  shared.rs  (+6 more)
(+2945 files in other folders)
