[package]
name = "abacus"
version = "0.1.0"
edition = "2024"
license = "EUPL-1.2"
rust-version = "1.85"
default-run = "abacus"

[features]
default = ["openapi", "dev-database"]
openapi = ["dep:utoipa-swagger-ui"]
memory-serve = ["dep:memory-serve"]
embed-typst = ["dep:typst", "dep:typst-pdf"]
dev-database = []
force-airgap-detection = []

[[bin]]
name = "gen-openapi"
required-features = ["openapi"]

# Note: if you add a dependency here, please update the README.md for the backend as well.

[dependencies]
axum = { version = "0.8", features = ["macros", "tracing", "tokio"] }
axum-extra = { version = "0.10", default-features = false, features = [
    "attachment",
    "cookie",
    "typed-header",
    "query",
] }
chrono = { version = "0.4", features = ["alloc", "std", "serde"] }
clap = { version = "4.5", default-features = false, features = [
    "derive",
    "std",
    "help",
] }
hyper = { version = "1", features = ["full"] }
tokio = { version = "1", features = ["full"] }
memory-serve = { version = "1.2.1", optional = true, features = [
    "force-embed",
] }
utoipa = { version = "5.3.1", features = ["axum_extras"] }
utoipa-axum = "0.2.0"
utoipa-swagger-ui = { version = "9.0.2", features = ["axum"], optional = true }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sqlx = { version = "0.8", features = ["runtime-tokio", "sqlite", "chrono"] }
tower = "0.5"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
tracing = "0.1.41"
tower-http = { version = "0.6", features = ["set-header", "trace"] }
typst = { version = "0.13.1", optional = true }
typst-pdf = { version = "0.13.1", optional = true }
quick-xml = { version = "0.37.5", features = ["serialize"] }
sha2 = "0.10.9"
argon2 = "0.5.3"
password-hash = { version = "0.5.0", features = ["getrandom"] }
rand = "0.9.0"
cookie = { version = "0.18.1", features = ["percent-encode"] }
zip = { version = "3.0.0", default-features = false, features = [
    "deflate",
    "chrono",
] }
strum = { version = "0.27", features = ["derive"] }

[dev-dependencies]
test-log = "0.2.17"
http-body-util = "0.1.3"
reqwest = { version = "0.12", default-features = false, features = ["json"] }

[build-dependencies]
memory-serve = { version = "1.2.1", optional = true }

[lints.rust]
unsafe_code = "forbid"

[lints.clippy]
cast_possible_truncation = "deny"
unwrap_used = "warn"

[profile.release]
overflow-checks = true
