[workspace]
resolver = "3"
members = [".", "apportionment", "pdf_gen"]

[workspace.package]
version = "1.1.0"
edition = "2024"
license = "EUPL-1.2"
rust-version = "1.89"

[workspace.dependencies]
async_zip = { version = "0.0.18", features = ["chrono", "deflate", "tokio"] }
axum = { version = "0.8", features = ["http1", "macros", "original-uri", "tokio", "json"], default-features = false }
axum-extra = { version = "0.12", default-features = false, features = ["attachment", "cookie", "query", "typed-header"] }
chrono = { version = "0.4", features = ["serde"], default-features = false }
http-body-util = "0.1.3"
rand = "0.10.1"
strum = { version = "0.28", features = ["derive"] }
test-log = "0.2.19"
tokio = { version = "1", features = ["full"] }
tracing = "0.1.44"

[package]
name = "abacus"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
default-run = "abacus"

[features]
default = ["openapi", "dev-database"]
openapi = ["dep:utoipa-swagger-ui"]
memory-serve = ["dep:memory-serve"]
embed-typst = ["pdf_gen/embed-typst"]
dev-database = []
airgap-detection = []
storybook = ["dep:memory-serve"]

[[bin]]
name = "gen-openapi"
required-features = ["openapi"]

[[bin]]
name = "gen-test-election"
required-features = ["dev-database"]

[[bin]]
name = "gen-pdf"
required-features = ["embed-typst"]

# Note: if you add a dependency here, please update the README.md for the backend as well.

[dependencies]
apportionment = { path = "./apportionment" }
pdf_gen = { path = "./pdf_gen" }
axum.workspace = true
axum-extra.workspace = true
chrono.workspace = true
clap = { version = "4.6", default-features = false, features = ["derive", "env", "help", "std"] }
eml-nl = { version = "0.5.0" }
hyper = { version = "1", features = ["http2"] }
tokio.workspace = true
memory-serve = { version = "2.1.0", optional = true}
utoipa = { version = "5.4.0", default-features = false }
utoipa-axum = "0.2.0"
utoipa-swagger-ui = { version = "9.0.2", features = ["axum"], optional = true , default-features = false }
serde = { version = "1.0", default-features = false }
serde_json = "1.0"
sqlx = { version = "0.8", features = ["chrono", "json", "macros", "migrate", "runtime-tokio", "sqlite"], default-features = false }
tower = "0.5"
tracing-subscriber = { version = "0.3.23", features = ["env-filter", "fmt"], default-features = false }
tracing.workspace = true
tower-http = { version = "0.6", features = ["set-header", "trace"] }
quick-xml = { version = "0.39.2", features = ["serialize"] }
sha2 = { version = "0.11.0", default-features = false }
argon2 = { version = "0.5.3", features = ["std"], default-features = false }
rand.workspace = true
cookie = "0.18.1"
strum.workspace = true
socket2 = "0.6.3"
ttf-parser = { version = "0.25.1", features = ["std"], default-features = false }

[dev-dependencies]
async_zip.workspace = true
http-body-util.workspace = true
reqwest = { version = "0.13", default-features = false, features = ["json"] }
test-log.workspace = true

[build-dependencies]
memory-serve = { version = "2.1.0", optional = true }

[workspace.lints.rust]
unsafe_code = "forbid"
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(fuzzing)'] }

[workspace.lints.clippy]
cast_possible_truncation = "deny"
cognitive_complexity = "warn"
too_many_lines = "warn"
unused_async = "warn"
unwrap_used = "warn"

[lints]
workspace = true

[profile.release]
overflow-checks = true
