[workspace]
resolver = "3"
members = [
    ".",
    "apportionment",
    "pdf_gen/types",
    "pdf_gen/impl",
    "pdf_gen/wrapper",
]

[workspace.package]
version = "1.1.0"
edition = "2024"
license = "EUPL-1.2"
rust-version = "1.95"

[workspace.dependencies]
pdf_gen = { path = "./pdf_gen/wrapper" }
pdf_gen_impl = { path = "./pdf_gen/impl" }
pdf_gen_types = { path = "./pdf_gen/types" }
async_zip = { version = "0.0.18", features = ["tokio", "deflate", "chrono"] }
axum = { version = "0.8", features = ["macros", "tracing", "tokio"] }
axum-extra = { version = "0.12", default-features = false, features = [
    "attachment",
    "cookie",
    "typed-header",
    "query",
] }
chrono = { version = "0.4", features = ["alloc", "std", "serde"] }
http-body-util = "0.1.3"
rand = "0.10.1"
strum = { version = "0.28", features = ["derive"] }
test-log = "0.2.19"
tokio = { version = "1", features = ["full"] }
tracing = "0.1.44"
rcgen = { version = "0.14", default-features = false, features = ["aws_lc_rs", "pem", "x509-parser"] }
rustls-pki-types = "1"
if-addrs = "0.15"
rustls = "0.23"
axum-server = { version = "0.8", default-features = false, features = ["tls-rustls-no-provider"] }

[package]
name = "abacus"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
default-run = "abacus"

[features]
default = ["openapi", "dev-database", "embed-typst"]
openapi = ["dep:utoipa-swagger-ui"]
memory-serve = ["dep:memory-serve"]
embed-typst = ["pdf_gen/static"]
dev-database = []
airgap-detection = []
storybook = ["dep:memory-serve"]
tls = ["dep:rcgen", "dep:rustls-pki-types", "dep:if-addrs", "dep:rustls", "dep:axum-server", "reqwest/rustls"]

[[bin]]
name = "gen-openapi"
required-features = ["openapi"]

[[bin]]
name = "gen-test-election"
required-features = ["dev-database"]

[[bin]]
name = "gen-pdf"

# Note: if you add a dependency here, please update the README.md for the backend as well.

[dependencies]
apportionment = { path = "./apportionment" }
pdf_gen.workspace = true
axum.workspace = true
axum-extra.workspace = true
chrono.workspace = true
clap = { version = "4.6", default-features = false, features = ["derive", "std", "help", "env"] }
eml-nl = { version = "0.6.0" }
hyper = { version = "1", features = ["full"] }
tokio.workspace = true
memory-serve = { version = "2.1.0", optional = true, features = ["force-embed"] }
utoipa = { version = "5.4.0", features = ["axum_extras", "chrono"] }
utoipa-axum = "0.2.0"
utoipa-swagger-ui = { version = "9.0.2", features = ["axum"], optional = true }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sqlx = { version = "0.9.0", features = ["runtime-tokio", "sqlite", "chrono", "sqlx-toml"] }
tower = "0.5"
tracing-subscriber = { version = "0.3.23", features = ["env-filter"] }
tracing.workspace = true
tower-http = { version = "0.6", features = ["set-header", "trace"] }
quick-xml = { version = "0.39.2", features = ["serialize"] }
sha2 = "0.11.0"
argon2 = { version = "0.5.3", features = ["std"] }
rand.workspace = true
cookie = { version = "0.18.1", features = ["percent-encode"] }
strum.workspace = true
socket2 = "0.6.3"
ttf-parser = "0.25.1"
# TLS (enabled by the `tls` feature)
rcgen = { workspace = true, optional = true }
rustls-pki-types = { workspace = true, optional = true }
if-addrs = { workspace = true, optional = true }
rustls = { workspace = true, optional = true }
axum-server = { workspace = true, optional = true }

[dev-dependencies]
async_zip.workspace = true
http-body-util.workspace = true
reqwest = { version = "0.13", default-features = false, features = ["json"] }
test-log.workspace = true
tempfile = "3"

[build-dependencies]
memory-serve = { version = "2.1.0", optional = true }

[workspace.lints.rust]
unsafe_code = "forbid"
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(fuzzing)'] }

[workspace.lints.clippy]
cast_possible_truncation = "deny"
cloned_instead_of_copied = "warn"
cognitive_complexity = "warn"
explicit_deref_methods = "warn"
explicit_into_iter_loop = "warn"
explicit_iter_loop = "warn"
needless_pass_by_value = "warn"
redundant_allocation = "warn"
too_many_lines = "warn"
trivially_copy_pass_by_ref = "warn"
unused_async = "warn"
unwrap_used = "warn"

[lints]
workspace = true

[profile.release]
overflow-checks = true
