[package]
name = "apportionment"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[features]
serde = ["dep:serde"]
utoipa = ["dep:utoipa"]

[dependencies]
serde = { version = "1.0", features = ["derive"], optional = true }
utoipa = { version = "5.4.0", optional = true }
tracing.workspace = true

[dev-dependencies]
test-log.workspace = true
