[package]
name = "pdf_gen"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[features]
embed-typst = ["dep:typst", "dep:typst-pdf"]

[dependencies]
async_zip.workspace = true
axum-extra.workspace = true
axum.workspace = true
chrono.workspace = true
rand.workspace = true
strum.workspace = true
tokio-util = { version = "0.7.18", features = ["io"] }
tokio.workspace = true
tracing.workspace = true
typst = { version = "0.14.2", optional = true }
typst-pdf = { version = "0.14.2", optional = true }

[dev-dependencies]
http-body-util.workspace = true
test-log.workspace = true
