[package]
name = "pdf_gen"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[lints]
workspace = true

[dependencies]
async_zip.workspace = true
axum-extra.workspace = true
axum.workspace = true
chrono.workspace = true
rand.workspace = true
strum.workspace = true
tokio-util = { version = "0.7.18", features = ["io"] }
tokio.workspace = true
tracing.workspace = true
typst = "0.14.2"
typst-pdf = "0.14.2"

[dev-dependencies]
http-body-util.workspace = true
test-log.workspace = true
