[workspace]

[package]
name = "apportionment-fuzz"
version = "0.0.0"
publish = false
edition = "2024"

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = "0.4"

[dependencies.apportionment]
path = ".."

[[bin]]
name = "simple_apportionment"
path = "fuzz_targets/simple_apportionment.rs"
test = false
doc = false
bench = false
