[workspace]

[package]
name = "apportionment-fuzz"
version = "0.0.0"
publish = false
edition = "2024"

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.23", default-features = false, features = ["registry", "std", "fmt"] }

[dependencies.apportionment]
path = ".."

[[bin]]
name = "simple_apportionment"
path = "fuzz_targets/simple_apportionment.rs"
test = false
doc = false
bench = false

[[bin]]
name = "differential_osv2020"
path = "fuzz_targets/differential_osv2020.rs"
test = false
doc = false
bench = false

[[bin]]
name = "apportionment"
path = "fuzz_targets/apportionment.rs"
test = false
doc = false
bench = false

[[bin]]
name = "anonymity"
path = "fuzz_targets/anonymity.rs"
test = false
doc = false
bench = false

[[bin]]
name = "fractions"
path = "fuzz_targets/fractions.rs"
test = false
doc = false
bench = false

[[bin]]
name = "house_monotonicity"
path = "fuzz_targets/house_monotonicity.rs"
test = false
doc = false
bench = false

[[bin]]
name = "population_monotonicity"
path = "fuzz_targets/population_monotonicity.rs"
test = false
doc = false
bench = false
