[package]
name = "pdf_gen_types"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[lints]
workspace = true

[dependencies]
async_zip.workspace = true
axum-extra.workspace = true
axum.workspace = true
tokio.workspace = true
tokio-util = { version = "0.7.18", features = ["io"] }
chrono.workspace = true
strum.workspace = true

[dev-dependencies]
http-body-util.workspace = true
test-log.workspace = true
